--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,5 @@ name = "pecker"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-crossterm = { version = "0.25.0", default-features = false }
+crossterm = { version = "0.27.0", default-features = false, features = ["events"] }
