--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.3.21", features = ["derive"] }
 crossterm = { version = "0.27.0", default-features = false, features = ["events"] }
